--- a/src/app/components/preview/preview.component.scss
+++ b/src/app/components/preview/preview.component.scss
@@ -5,7 +5,8 @@
   justify-content: center;
   background-color: #161616;
   border-radius: 6px;
-  height: 56.25vh;
+  width: 960px;
+  height: 540px;
 }
 
 .mat-icon {
