--- a/src/app/components/scene/scene.component.scss
+++ b/src/app/components/scene/scene.component.scss
@@ -38,9 +38,7 @@
 .scene-placeholder {
   background: #d0d0d0;
   min-height: 66px;
-  margin-top: 3px;
-  margin-left: 3px;
-  margin-bottom: 12px;
+  margin: 3px 0 3px 3px;
   width: 240px;
   border-radius: 6px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
