--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,6 @@ html,
 body,
 main,
 div {
-  overflow: hidden;
   margin: 0;
   padding: 0;
 }
@@ -14,4 +13,8 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+div {
+  overflow: hidden;
 }
